2009-04-29  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* bin/pocc-alternate: New. Add missing file.
	* Makefile.am: updates.

2009-04-29  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/include/pocc/driver-pluto.h,
	* driver/pocc/driver-clan.c,
	* driver/pocc/driver-letsee.c,
	* driver/pocc/options.c,
	* driver/pocc/driver-cloog.c,
	* driver/pocc/driver-pluto.c,
	* driver/pocc/driver-codegen.c,
	* driver/src/options.h,
	* driver/src/pocc.c,
	* driver/src/options.c,
	* doc/pocc.texi,
	* bin/pocc-make,
	* generators/scripts/inscop: Various fixes.
	* Makefile.am: Update distribution package.

	* generators/scripts/annotations: Delete. Substitute by...
	* generators/scripts/annotations.tar.gz: ... this archive.
	* install.sh: Automatically inflate annotations.tar.gz.

2009-04-28  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* install.sh: Move the default configuration to "base".
	* bin/pocc-checkout: Change default SVN user.
	* bin/pocc-util.in: Fixes.
	* doc/pocc.texi: Updates.

2009-04-28  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch finalizes a decent version of PoCC. Beta mode is on!

	* config/devel/configure.cfg,
	* config/base/configure.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg,
	* config/irregular/configure.cfg: Workaround for polylib
	configuration bug.

	* install.sh,
	* driver/src/options.c,
	* bin/pocc-make,
	* bin/pocc-util.in,
	* bin/pocc-checkout,
	* generators/scripts/inscop,
	* generators/scripts/timercode: Fixes.

	* doc/pocc.texi: Improve documentation.

2009-04-28  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* config/configure.cfg,
	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/driver.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg,
	* config/irregular/configure.cfg,
	* config/irregular/driver.cfg: New. Configuration files for