@@ -1,5 +1,11 @@
 2009-04-29  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
 
+	* install.sh,
+	* configure.ac,
+	* doc/Makefile.am: Fixes.
+
+2009-04-29  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
+
 	* bin/pocc-alternate: New. Add missing file.
 	* Makefile.am: updates.
 
